--- a/delivery/templates/delivery/menu.html
+++ b/delivery/templates/delivery/menu.html
@@ -1,16 +1,13 @@
 {% extends 'delivery/base.html' %}
-{% block content %}
-<html>
-    <head>
-        <title>Menu - {{ res.Res_name}}</title>
-    </head>
-    <body>
-    <h2>Menu for {{ res.Res_name }}</h2>
-    <p>Address: {{ res.address }}</p>
-    <p>Category: {{ res.Food_cat }}</p>
-    <p>Rating: {{ res.rating }}</p>
 
-    <table border="1" style="width: 100vw;">
+{% block content %}
+<h2>Menu for {{ res.Res_name }}</h2>
+<p>Address: {{ res.address }}</p>
+<p>Category: {{ res.Food_cat }}</p>
+<p>Rating: {{ res.rating }}</p>
+
+<table class="table table-striped table-bordered">
+    <thead>
         <tr>
             <th>Item Name</th>
             <th>Description</th>
@@ -19,6 +16,8 @@
             <th>Category</th>
             <th>Action</th>
         </tr>
+    </thead>
+    <tbody>
         {% for item in menu %}
         <tr>
             <td>{{ item.item_name }}</td>
@@ -28,21 +27,20 @@
             <td>{{ item.category }}</td>
             <td>
                 <a href="{% url 'delivery:delete_menu' item.id res.id %}" 
+                   class="btn btn-danger"
                    onclick="return confirm('Are you sure you want to delete this item?');">
-                    <button>Delete</button>
+                    Delete
                 </a>
             </td>
         </tr>
         {% empty %}
         <tr><td colspan="6">No menu items available.</td></tr>
         {% endfor %}
-    </table>
+    </tbody>
+</table>
 
-    <br />
-    <a href="{% url 'delivery:add_menu' res.id %}"
-        onclick="return confirm('Are you sure you want to delete this item?');">
-        <button>Add Menu</button>
-    </a>
-    </body>
-    </html>
+<br />
+<a href="{% url 'delivery:add_menu' res.id %}" class="btn btn-primary">
+    Add Menu Item
+</a>
 {% endblock %}
