--- a/delivery/templates/delivery/sign_in.html
+++ b/delivery/templates/delivery/sign_in.html
@@ -1,13 +1,26 @@
 {% extends 'delivery/base.html' %}
+
 {% block content %}
-<form method="POST" action="{% url 'delivery:handle_signin' %}">
-    {% csrf_token %}
-    <label>Username</label>
-    <input type="text" name="username" />
+<head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'delivery/css/styles.css' %}">
+</head>
+<div class="container mt-5">
+    <h2 class="text-center">Sign In</h2>
+    <form method="POST" action="{% url 'delivery:handle_signin' %}" class="signin-form">
+        {% csrf_token %}
+        
+        <div class="form-group mb-3">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" class="form-control" required />
+        </div>
 
-    <label>Password</label>
-    <input type="password" name="password" />
+        <div class="form-group mb-3">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-control" required />
+        </div>
 
-    <button>Sign In</button>
-</form>
+        <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+    </form>
+</div>
 {% endblock %}
