--- a/delivery/templates/delivery/sign_up.html
+++ b/delivery/templates/delivery/sign_up.html
@@ -1,21 +1,41 @@
 {% extends 'delivery/base.html' %}
+
 {% block content %}
-<form method="POST" action="{% url 'delivery:handle_signup' %}">
-    {% csrf_token %}
-    <label>Username</label>
-    <input type="text" name="username" />
+<head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'delivery/css/styles.css' %}">
+</head>
+<div class="container mt-5">
+    <h2 class="text-center">Sign Up</h2>
+    <form method="POST" action="{% url 'delivery:handle_signup' %}" class="signup-form">
+        {% csrf_token %}
+        
+        <div class="form-group mb-3">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" class="form-control" required />
+        </div>
 
-    <label>Password</label>
-    <input type="password" name="password" />
+        <div class="form-group mb-3">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-control" required />
+        </div>
 
-    <label>Email</label>
-    <input type="email" name="email" />
+        <div class="form-group mb-3">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" class="form-control" required />
+        </div>
 
-    <label>Mobile</label>
-    <input type="mobile" name="mobile" />
+        <div class="form-group mb-3">
+            <label for="mobile">Mobile</label>
+            <input type="text" name="mobile" id="mobile" class="form-control" required />
+        </div>
 
-    <label>Address</label>
-    <input type="address" name="address" />
-    <button>Sign Up</button>
-</form>
+        <div class="form-group mb-3">
+            <label for="address">Address</label>
+            <input type="text" name="address" id="address" class="form-control" required />
+        </div>
+
+        <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+    </form>
+</div>
 {% endblock %}
