--- a/delivery/templates/delivery/userdata.html
+++ b/delivery/templates/delivery/userdata.html
@@ -1,26 +1,37 @@
-<table>
-    <tr>
-        <th>Username:</th>
-        <th>{{username}}</th>
-    </tr>
-
-    <tr>
-        <th>Password:</th>
-        <th>{{password}}</th>
-    </tr>
-
-    <tr>
-        <th>Email:</th>
-        <th>{{email}}</th>
-    </tr>
-
-    <tr>
-        <th>Mobile:</th>
-        <th>{{mobile}}</th>
-    </tr>
-
-    <tr>
-        <th>Address:</th>
-        <th>{{address}}</th>
-    </tr>
-</table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>User Details</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'delivery/css/styles.css' %}">
+</head>
+<body>
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">User Details</h2>
+        <table class="table table-bordered table-striped">
+            <tr>
+                <th>Username:</th>
+                <td>{{ username }}</td>
+            </tr>
+            <tr>
+                <th>Password:</th>
+                <td>{{ password }}</td>
+            </tr>
+            <tr>
+                <th>Email:</th>
+                <td>{{ email }}</td>
+            </tr>
+            <tr>
+                <th>Mobile:</th>
+                <td>{{ mobile }}</td>
+            </tr>
+            <tr>
+                <th>Address:</th>
+                <td>{{ address }}</td>
+            </tr>
+        </table>
+    </div>
+</body>
+</html>
